# doom-clone

./: .gitignore  CMakeLists.txt  Makefile  README.md  plan.md
assets/maps/: level1.txt
src/: assets.c  assets.h  audio.c  audio.h  door.c  door.h  enemy.c  enemy.h  engine.c  engine.h  game.c  game.h  hud.c  hud.h  input.c  input.h  item.c  item.h  main.c  map.c  map.h  player.c  player.h  raycast.c  raycast.h  sprite.c  sprite.h  utils.c  utils.h  weapon.c  weapon.h
